tests/baselines/reference/parserTypeQuery9.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery9.ts (1 errors) ====
    var s: typeof A[];
                  ~
!!! error TS2304: Cannot find name 'A'.
    